--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,26 @@
 
     <groupId>org.example</groupId>
     <artifactId>springboot_demos</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>powerdownloader</module>
+        <module>test</module>
+    </modules>
 
+    <build>
 
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                    </configuration>
+                </plugin>
+            </plugins>
+
+    </build>
 </project>
