--- a/es/pom.xml
+++ b/es/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
             <version>2.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.13.4</version>
+        </dependency>
     </dependencies>
 
     <build>
