--- a/netty_jt808/pom.xml
+++ b/netty_jt808/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.69_noneautotype</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 </project>
