一对多 多对多

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>test</module>
         <module>rocketmq</module>
         <module>netty_jt808</module>
+        <module>hibernate</module>
     </modules>
 
     <build>
