--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,11 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.7.2</version>
+    </parent>
     <groupId>org.example</groupId>
     <artifactId>springboot_demos</artifactId>
     <packaging>pom</packaging>
@@ -14,6 +18,7 @@
         <module>rocketmq</module>
         <module>netty_jt808</module>
         <module>hibernate</module>
+        <module>satoken</module>
     </modules>
 
     <build>
